--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -8,9 +8,10 @@
 
 
     <TextView
+        android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data Fragment"
+        android:text=""
         tools:layout_editor_absoluteX="155dp"
         tools:layout_editor_absoluteY="207dp"
         android:textSize="30sp"
